--- a/packages/dnb-eufemia/src/components/modal/style/_modal-mixins.scss
+++ b/packages/dnb-eufemia/src/components/modal/style/_modal-mixins.scss
@@ -7,6 +7,7 @@
   width: 100%;
   height: 100vh;
   max-width: 100%; // Edge/IE overflow fix
+  max-height: 100vh;
 
   // NB: Do not set "max-height" here – old Android 4.4 does have then troubles
   // max-height: none;
